--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
             </article>
     
         </div>
+        <footer>
+            <img src="foot2.jpeg" alt="nasty foot">
+        </footer>
     </div>
+    
 </body>
 
 </html>
