major update!!! REsposnide

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Elliot Fogarty - Design 360</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://use.typekit.net/fqf3wcs.css">
     </head>
@@ -10,7 +11,8 @@
 
             <header>
             <h1>Elliot Fogarty</h1>
-            <h2>Design 360<br>Web Design<br></h2>
+            <hr>
+            <h2>Design 360<br>Winter 2023<br></h2>
             </header>
 
             <div class="content">
