--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <article class="left">
                     <nav>
                         <ul>
+                            <li><a href="exercise3.html">Exercise 3</a></li>
                             <li><a href="#">Project 1</a></li>
                             <li><a href="#">Project 1 Process</a></li>
                             <li><a href="#">Project 2</a></li>
