--- a/exercise3.html
+++ b/exercise3.html
@@ -22,8 +22,8 @@
                 <div class="rule"></div>
                         <ul>
                             <li><a href="excercise3.html">Exercise 3</a></li>
-                            <li><a href="#">Project 1</a></li>
-                            <li><a href="#">Project 1 Process</a></li>
+                            <li><a href="https://www.figma.com/proto/4GNFJafk4t35atqnol2Cm2/Habitat-For-Humanity-Seattle?node-id=0%3A1&viewport=705%2C2331%2C0.32&scaling=scale-down&starting-point-node-id=99%3A396&show-proto-sidebar=1">Project 1</a></li>
+                            <li><a href="Project1deck.pdf">Project 1 Process</a></li>
                             <li><a href="#">Project 2</a></li>
                             <li><a href="#">Project 2 Process</a></li>
                         </ul>
