--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
                 <article class="left">
                     <nav>
                         <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="exercise3.html">Exercise 3</a></li>
+                            <li><a href="exercise5.html">Exercise 5</a></li>
                             <li><a href="https://www.figma.com/proto/4GNFJafk4t35atqnol2Cm2/Habitat-For-Humanity-Seattle?node-id=0%3A1&scaling=scale-down&starting-point-node-id=20%3A2020&show-proto-sidebar=1">Project 1</a></li>
                             <li><a href="Project1deck.pdf">Project 1 Process</a></li>
                             <li><a href="#">Project 2</a></li>
                             <li><a href="#">Project 2 Process</a></li>
                         </ul>
-                    </nav>  
+                    </nav> 
                 </article>
 
 
