sort of working

--- a/gordonparks.html
+++ b/gordonparks.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gordon Parks: Beautiful Photos of an Ugly History</title>
-    <link rel="stylesheet" href="gpstyle.css">
+    <link rel="stylesheet" href="css/gpstyle.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
     <section class="junebug">
            <p>By Andrew Dickson<br>
             3rd February 2021<br>
@@ -25,8 +26,8 @@
             photos with the eye of a poet.</p>
     </section>
 
-    <section class="liberty">
-        <p>ere it not for the officer’s oldfashioned
+    <section class="liberty ">
+        <p>ere it not for the officer’s old fashioned
             uniform, you could
             be forgiven for thinking that
             the picture was taken at one of
@@ -56,7 +57,7 @@
             police state” still resonates now.</p>
     </section>
 
-    <section class="wateringhole">
+    <section class="slide wateringhole">
         <p>he photograph is one of more than 50
             Parks images currently on show at Jack
             Shainman Gallery in New York – in fact two
@@ -83,7 +84,7 @@
             words.</p>
     </section>
 
-    <section class="gothic">
+    <section class="slide gothic">
         <p>ne of the earliest photographs to make
             Parks’s name, American Gothic (1942),
             is included in the show. Taken when he was working
@@ -106,7 +107,8 @@
             Minnesota, Parks earned his first wage playing piano in
             a brothel.</p>
     </section>
-    <section class="waterfountain">
+
+    <section class="slide waterfountain">
         <p>fter taking a job as a railroad
             porter, he bought a camera
             in a pawnshop in 1937,
@@ -134,7 +136,7 @@
             before his death in 2006.</p>
     </section>
 
-    <section class="crutch">
+    <section class="slide crutch">
         <p>here was almost nothing her father couldn’t do if he
             wanted, says Leslie Parks with a laugh: he had the
             kind of energy that burned up the room. “There was always
@@ -160,7 +162,7 @@
             seem to say. Together we can achieve anything.</p>
     </section>
 
-    <section class="gun">
+    <section class="slide gun">
         <p>n another image there are two black boys, one
             brandishing what could be a real pistol and pretending
             to fire it, but alongside them is a white boy, a mop of
@@ -194,8 +196,8 @@
             most about the universe – racism, intolerance, poverty.”</p>
     </section>
 
-    <section class="invisible">
-        <p>et the pictures that truly resonate, perhaps, are the
+    <section class="slide invisible">
+        <p class="two columns">et the pictures that truly resonate, perhaps, are the
             gentler ones, where he stepped away
             from outright activism and allowed his
             poet’s eye to roam. Commissioned by Life
@@ -215,7 +217,7 @@
             reality, genuine people rather than caricatures
             or headlines.</p>
     </section>
-    <section class="couple">
+    <section class="slide couple">
         <p>n segregated black communities in the
             South there is quietness and normality
             alongside inequality: boys going fishing, girls
@@ -229,5 +231,6 @@
             of beauty in these pictures,” she says quietly.
             “Always beauty.”</p>
     </section>
+    </div>
 </body>
 </html>
