--- a/gordonparks.html
+++ b/gordonparks.html
@@ -13,21 +13,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-    <section class="junebug">
-           <p>By Andrew Dickson<br>
-            3rd February 2021<br>
-            <br>
-            Gordon Parks documented deep,
-            wounding issues that have long been a
-            part of the US story. Andrew Dickson
-            explores the work of a man who compared
-            his camera to a weapon, yet shot his
-            photos with the eye of a poet.</p>
-    </section>
+    <div class="gpcontainer">
+        <section class="junebug">
 
+            <div class="titlerow">
+                    <img src="gpphotos/title.png">
+                <p>By Andrew Dickson<br>
+                    3rd February 2021<br>
+                    <br>
+                    <strong>
+                    Gordon Parks documented deep,
+                    wounding issues that have long been a
+                    part of the US story. Andrew Dickson
+                    explores the work of a man who compared
+                    his camera to a weapon, yet shot his
+                    photos with the eye of a poet.</strong></p>
+            </div>
+
+        </section>
     <section class="liberty ">
-        <p>ere it not for the officer’s old fashioned
+        <p><img src="gpphotos/dropcaps/w.png">ere it not for the officer’s old fashioned
             uniform, you could
             be forgiven for thinking that
             the picture was taken at one of
@@ -58,7 +63,7 @@
     </section>
 
     <section class="slide wateringhole">
-        <p>he photograph is one of more than 50
+        <p><img src="gpphotos/dropcaps/t.png">he photograph is one of more than 50
             Parks images currently on show at Jack
             Shainman Gallery in New York – in fact two
             galleries, because the exhibition spans both
@@ -85,7 +90,7 @@
     </section>
 
     <section class="slide gothic">
-        <p>ne of the earliest photographs to make
+        <p><img src="gpphotos/dropcaps/o.png">ne of the earliest photographs to make
             Parks’s name, American Gothic (1942),
             is included in the show. Taken when he was working
             for the FSA, it was inspired by Grant Wood’s muchreproduced
@@ -109,7 +114,7 @@
     </section>
 
     <section class="slide waterfountain">
-        <p>fter taking a job as a railroad
+        <p><img src="gpphotos/dropcaps/a.png">fter taking a job as a railroad
             porter, he bought a camera
             in a pawnshop in 1937,
             inspired by photos by the great documentary
@@ -137,7 +142,7 @@
     </section>
 
     <section class="slide crutch">
-        <p>here was almost nothing her father couldn’t do if he
+        <p><img src="gpphotos/dropcaps/t.png">here was almost nothing her father couldn’t do if he
             wanted, says Leslie Parks with a laugh: he had the
             kind of energy that burned up the room. “There was always
             this moving forward with him,” she says. “No giving up or
@@ -163,7 +168,7 @@
     </section>
 
     <section class="slide gun">
-        <p>n another image there are two black boys, one
+        <p><img src="gpphotos/dropcaps/i.png">n another image there are two black boys, one
             brandishing what could be a real pistol and pretending
             to fire it, but alongside them is a white boy, a mop of
             blond hair grinning for the camera – apparently a friend.
@@ -197,7 +202,7 @@
     </section>
 
     <section class="slide invisible">
-        <p class="two columns">et the pictures that truly resonate, perhaps, are the
+        <p><img src="gpphotos/dropcaps/y.png">et the pictures that truly resonate, perhaps, are the
             gentler ones, where he stepped away
             from outright activism and allowed his
             poet’s eye to roam. Commissioned by Life
@@ -218,7 +223,7 @@
             or headlines.</p>
     </section>
     <section class="slide couple">
-        <p>n segregated black communities in the
+        <p><img src="gpphotos/dropcaps/i.png">n segregated black communities in the
             South there is quietness and normality
             alongside inequality: boys going fishing, girls
             playing in the water, women gossiping over
