--- a/gordonparks.html
+++ b/gordonparks.html
@@ -236,6 +236,9 @@
             of beauty in these pictures,” she says quietly.
             “Always beauty.”</p>
     </section>
+    <footer>
+        
+    </footer>
     </div>
 </body>
 </html>
