--- a/gordonparks.html
+++ b/gordonparks.html
@@ -63,6 +63,7 @@
     </section>
 
     <section class="slide wateringhole">
+        <img src="/gpphotos/threadquote.png" class="quote">
         <p><img src="gpphotos/dropcaps/t.png">he photograph is one of more than 50
             Parks images currently on show at Jack
             Shainman Gallery in New York – in fact two
@@ -237,7 +238,7 @@
             “Always beauty.”</p>
     </section>
     <footer>
-        
+
     </footer>
     </div>
 </body>
