--- a/gordonparks.html
+++ b/gordonparks.html
@@ -97,12 +97,16 @@
         <p><img src="gpphotos/dropcaps/o.png">ne of the earliest photographs to make
             Parks’s name, American Gothic (1942),
             is included in the show. Taken when he was working
-            for the FSA, it was inspired by Grant Wood’s muchreproduced
+            for the FSA, it was inspired by Grant Wood’s much reproduced
             painting of the same title, which depicts a
             forbiddingly respectable white farmer and his daughter
             standing in front of their forbiddingly respectable
-            white-painted Midwestern house.<br>
-            or clues as to why, she suggests, you only need look at
+            white-painted Midwestern house. <br>
+            If we detect echoes between past and present, we should hardly be surprised, suggests Leslie Parks, one of the photographer's daughters: her father trained his gaze on deep, wounding issues that have always been part of the US story.
+<br>
+"He was photographing what was around him," she reflects. "He wasn't looking to the future. But I have a feeling he did know how important his images would become."
+<br>
+            For clues as to why, she suggests, you only need look at
             Parks’s life story. Born in the small rural town of Fort
             Scott, Kansas, he was the youngest of 15 children. The
             family were dirt-poor, and schools were segregated;
@@ -147,7 +151,7 @@
     </section>
 
     <section class="slide crutch">
-        <p><img src="gpphotos/dropcaps/t.png">here was almost nothing her father couldn’t do if he
+        <p class="left col1"><img src="gpphotos/dropcaps/t.png">here was almost nothing her father couldn’t do if he
             wanted, says Leslie Parks with a laugh: he had the
             kind of energy that burned up the room. “There was always
             this moving forward with him,” she says. “No giving up or
@@ -156,7 +160,9 @@
             twist: his subject is a black cleaner, Ella Watson, shown
             holding a mop and broom and standing soberly in front
             of the Stars and Stripes (the composition was artfully
-            posed by Parks). The image seems timelier than ever in
+            posed by Parks). </p>
+            <p class="right col1">
+            The image seems timelier than ever in
             the aftermath of the attack on the US Capitol in the dying
             days of Donald Trump’s reign – where black cleaning staff 
             were left to clear up afterwards. “If that doesn’t hit you,
@@ -229,7 +235,7 @@
             or headlines.</p>
     </section>
     <section class="slide couple">
-        <p><img src="gpphotos/dropcaps/i.png">n segregated black communities in the
+        <p class="special col1"><img src="gpphotos/dropcaps/i.png">n segregated black communities in the
             South there is quietness and normality
             alongside inequality: boys going fishing, girls
             playing in the water, women gossiping over
