--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <li><a href="Project1deck.pdf">Project 1 Process</a></li>
                             <li><a href="gpdesktop.pdf">Project 2 Desktop Prototype</a></li>
                             <li><a href="gpdesktop.pdf">Project 2 Mobile Prototype</a></li>
-                            <li><a href="gordonparks.html">Project 2 Website</a></li>
+                            <li><a href="gordonparks">Project 2 Website</a></li>
                             <li><a href="#">Project 2 Process</a></li>
                         </ul>
                     </nav> 
