text size increase

--- a/gordonparks/index.html
+++ b/gordonparks/index.html
@@ -53,7 +53,7 @@
             predominantly black New York neighbourhood
             some time in 1963, during one of the protests
             about civil rights that roiled the US that year,
-            too.<br>
+            too.<br><br><br>
             In June 1963, George Wallace, the notorious
             segregationist governor of Alabama,
             attempted to prevent black students
