--- a/gordonparks/index.html
+++ b/gordonparks/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gordon Parks: Beautiful Photos of an Ugly History</title>
+    <link rel="stylesheet" href="../css/skeleton.css">
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="css/gpstyle.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;900&display=swap" rel="stylesheet">
@@ -45,7 +45,7 @@
             summer. All it needs is a couple of face masks
             and we could be in the centre of New York or
             Minneapolis in the turbulent and agitated days
-            of mid-2020.<br>
+            of mid-2020.<br><br>
             In fact this image, captured by the
             photographer Gordon Parks, is nearly 60
             years old. Entitled simply Harlem Rally, we
@@ -53,7 +53,7 @@
             predominantly black New York neighbourhood
             some time in 1963, during one of the protests
             about civil rights that roiled the US that year,
-            too.<br><br><br>
+            too.<br><br>
             In June 1963, George Wallace, the notorious
             segregationist governor of Alabama,
             attempted to prevent black students
@@ -77,7 +77,7 @@
             accompanying essay by the critic Jelani Cobb
             – it shows two contrasting sides to Parks, one
             of the most significant black photographers of
-            his era.<br>
+            his era.<br><br>
             On West 20th Street, there are photographs
             drawn from his famous Harlem series Invisible
             Man, a virtuosic reimagining of Ralph
@@ -102,11 +102,11 @@
             painting of the same title, which depicts a
             forbiddingly respectable white farmer and his daughter
             standing in front of their forbiddingly respectable
-            white-painted Midwestern house. <br>
+            white-painted Midwestern house. <br><br>
             If we detect echoes between past and present, we should hardly be surprised, suggests Leslie Parks, one of the photographer's daughters: her father trained his gaze on deep, wounding issues that have always been part of the US story.
-<br>
+<br><br>
 "He was photographing what was around him," she reflects. "He wasn't looking to the future. But I have a feeling he did know how important his images would become."
-<br>
+<br><br>
             For clues as to why, she suggests, you only need look at
             Parks’s life story. Born in the small rural town of Fort
             Scott, Kansas, he was the youngest of 15 children. The
@@ -152,24 +152,26 @@
     </section>
 
     <section class="slide crutch">
-        <p class="left col1"><img src="gpphotos/dropcaps/t.png" class="caps">here was almost nothing her father couldn’t do if he
+        <div class="crutchcontainer">
+        <p class="four columns col1" style="padding: 0"><img src="gpphotos/dropcaps/t.png" class="caps">here was almost nothing her father couldn’t do if he
             wanted, says Leslie Parks with a laugh: he had the
             kind of energy that burned up the room. “There was always
             this moving forward with him,” she says. “No giving up or
-            doubt.”<br>
+            doubt.”<br><br>
             Parks gave this icon of rural Americana a sardonic racial
             twist: his subject is a black cleaner, Ella Watson, shown
             holding a mop and broom and standing soberly in front
             of the Stars and Stripes (the composition was artfully
-            posed by Parks). </p>
-            <p class="right col1">
-            The image seems timelier than ever in
+            posed by Parks). The image seems timelier than ever in
             the aftermath of the attack on the US Capitol in the dying
             days of Donald Trump’s reign – where black cleaning staff 
-            were left to clear up afterwards. “If that doesn’t hit you,
+            were left to clear up afterwards.</p>
+            <div class="four columns"><div class="notvisible">null</div></div>
+            <p class="four columns col1" style="padding: 0">
+             “If that doesn’t hit you,
             especially in the last couple of weeks,” says Leslie Parks,
             “then I don’t know what you’re looking at.”
-            <br>
+            <br><br>
             Again and again in these images, Parks shows a
             fascination with hands – a preacher’s lifted in benediction,
             hands in a crowd lifted in acclamation or joy, reaching
@@ -177,6 +179,7 @@
             these civil rights photos, which are less outraged and more
             optimistic than we might expect. United we stand, they
             seem to say. Together we can achieve anything.</p>
+            </div>
     </section>
 
     <section class="slide gun">
@@ -188,7 +191,7 @@
             We see Willie Causey and his wife on their front porch, a
             well-tended garden behind them, the sea-green of Mrs
             Causey’s spotless apron matching precisely the colour of
-            his rocking chair.<br>
+            his rocking chair.<br><br>
             Parks’s career was not without struggle itself. Despite his
             remarkable success, he chafed at the restrictions of the
             magazine picture-story format and the meddling of white
@@ -201,7 +204,7 @@
             life is one of fear, frustration and violence,” read the
             sub-headline). After kicking up a fuss, he was told his
             assignment would no longer make the magazine cover.
-            <br>
+            <br><br>
             Parks repeatedly compared his camera to a weapon. One
             version of the line ran, “you have a 45mm automatic pistol
             on your lap, and I have a 35mm camera on my lap, and
@@ -225,7 +228,7 @@
             which African Americans refused to travel on
             city buses in protest at segregated seating –
             he emerged with something quite different.
-            <br>
+            <br><br>
             There are hard existences here, undeniably,
             and you sense Parks’s slow-burning anger at
             the federal government’s policy of “separatebut-
@@ -236,18 +239,21 @@
             or headlines.</p>
     </section>
     <section class="slide couple">
-        <p class="special col1"><img src="gpphotos/dropcaps/i.png" class="caps">n segregated black communities in the
-            South there is quietness and normality
-            alongside inequality: boys going fishing, girls
-            playing in the water, women gossiping over
-            the garden fence, families going to church.
-            People just living their lives.<br>
-            Also beauty, as Leslie Parks notes. For all
-            the ugliness of the political system Parks set
-            out to depict, her father found a great deal of
-            loveliness in this place too. “You just see a lot
-            of beauty in these pictures,” she says quietly.
-            “Always beauty.”</p>
+        <div class="six columns"><div class="notvisible">null</div></div>
+        <div class="six columns">
+            <p style="column-count: 1; top:0"><img src="gpphotos/dropcaps/i.png" class="caps">n segregated black communities in the
+                South there is quietness and normality
+                alongside inequality: boys going fishing, girls
+                playing in the water, women gossiping over
+                the garden fence, families going to church.
+                People just living their lives.<br><br>
+                Also beauty, as Leslie Parks notes. For all
+                the ugliness of the political system Parks set
+                out to depict, her father found a great deal of
+                loveliness in this place too. “You just see a lot
+                of beauty in these pictures,” she says quietly.
+                “Always beauty.”</p>
+        </div>
     </section>
     <footer>
         <p><a href="https://jackshainman.com/exhibitions/gordon_parks">Parks: Half and the Whole is at Jack Shainman Gallery</a>, New York, until 20 Feb
