god fuking damnit

--- a/gordonparks/index.html
+++ b/gordonparks/index.html
@@ -153,32 +153,32 @@
 
     <section class="slide crutch">
         <div class="crutchcontainer">
-        <p class="four columns col1" style="padding: 0"><img src="gpphotos/dropcaps/t.png" class="caps">here was almost nothing her father couldn’t do if he
-            wanted, says Leslie Parks with a laugh: he had the
-            kind of energy that burned up the room. “There was always
-            this moving forward with him,” she says. “No giving up or
-            doubt.”<br><br>
-            Parks gave this icon of rural Americana a sardonic racial
-            twist: his subject is a black cleaner, Ella Watson, shown
-            holding a mop and broom and standing soberly in front
-            of the Stars and Stripes (the composition was artfully
-            posed by Parks). The image seems timelier than ever in
-            the aftermath of the attack on the US Capitol in the dying
-            days of Donald Trump’s reign – where black cleaning staff 
-            were left to clear up afterwards.</p>
-            <div class="four columns"><div class="notvisible">null</div></div>
-            <p class="four columns col1" style="padding: 0">
-             “If that doesn’t hit you,
-            especially in the last couple of weeks,” says Leslie Parks,
-            “then I don’t know what you’re looking at.”
-            <br><br>
-            Again and again in these images, Parks shows a
-            fascination with hands – a preacher’s lifted in benediction,
-            hands in a crowd lifted in acclamation or joy, reaching
-            for togetherness. Togetherness is arguably the theme of
-            these civil rights photos, which are less outraged and more
-            optimistic than we might expect. United we stand, they
-            seem to say. Together we can achieve anything.</p>
+            <p class="col1 right" style="padding: 0"><img src="gpphotos/dropcaps/t.png" class="caps">here was almost nothing her father couldn’t do if he
+                wanted, says Leslie Parks with a laugh: he had the
+                kind of energy that burned up the room. “There was always
+                this moving forward with him,” she says. “No giving up or
+                doubt.”<br><br>
+                Parks gave this icon of rural Americana a sardonic racial
+                twist: his subject is a black cleaner, Ella Watson, shown
+                holding a mop and broom and standing soberly in front
+                of the Stars and Stripes (the composition was artfully
+                posed by Parks). The image seems timelier than ever in
+                the aftermath of the attack on the US Capitol in the dying
+                days of Donald Trump’s reign – where black cleaning staff 
+                were left to clear up afterwards.</p>
+                <!-- <div class="four columns"><div class="notvisible">null</div></div> -->
+                <p class="col1 left" style="padding: 0">
+                “If that doesn’t hit you,
+                especially in the last couple of weeks,” says Leslie Parks,
+                “then I don’t know what you’re looking at.”
+                <br><br>
+                Again and again in these images, Parks shows a
+                fascination with hands – a preacher’s lifted in benediction,
+                hands in a crowd lifted in acclamation or joy, reaching
+                for togetherness. Togetherness is arguably the theme of
+                these civil rights photos, which are less outraged and more
+                optimistic than we might expect. United we stand, they
+                seem to say. Together we can achieve anything.</p>
             </div>
     </section>
 
