--- a/gordonparks/index.html
+++ b/gordonparks/index.html
@@ -153,7 +153,7 @@
 
     <section class="slide crutch">
         <div class="crutchcontainer">
-            <p class="col1 right" style="padding: 0"><img src="gpphotos/dropcaps/t.png" class="caps">here was almost nothing her father couldn’t do if he
+            <p class="four columns col1" style="padding: 0"><img src="gpphotos/dropcaps/t.png" class="caps">here was almost nothing her father couldn’t do if he
                 wanted, says Leslie Parks with a laugh: he had the
                 kind of energy that burned up the room. “There was always
                 this moving forward with him,” she says. “No giving up or
@@ -166,8 +166,8 @@
                 the aftermath of the attack on the US Capitol in the dying
                 days of Donald Trump’s reign – where black cleaning staff 
                 were left to clear up afterwards.</p>
-                <!-- <div class="four columns"><div class="notvisible">null</div></div> -->
-                <p class="col1 left" style="padding: 0">
+                <div class="four columns"><div class="notvisible">null</div></div>
+                <p class="four columns col1" style="padding: 0">
                 “If that doesn’t hit you,
                 especially in the last couple of weeks,” says Leslie Parks,
                 “then I don’t know what you’re looking at.”
