--- a/gordonparks/index.html
+++ b/gordonparks/index.html
@@ -241,7 +241,7 @@
     <section class="slide couple">
         <div class="six columns"><div class="notvisible">null</div></div>
         <div class="six columns">
-            <p style="column-count: 1; top:0"><img src="gpphotos/dropcaps/i.png" class="caps">n segregated black communities in the
+            <p style="column-count: 1; top:0; padding: 0 50px;"><img src="gpphotos/dropcaps/i.png" class="caps">n segregated black communities in the
                 South there is quietness and normality
                 alongside inequality: boys going fishing, girls
                 playing in the water, women gossiping over
